_sass/_post.sass
.section--post-body
  .video-wrapper
    margin-bottom: 3 * $base-spacing

.section--hero--post
  display: flex
  align-items: flex-end
  justify-content: flex-start

.section-text--post
  padding: 0
  @media screen and (min-width: $medium-screen)
    width: percentage(9/12)
    margin-left: percentage(1.5/12)
  @media screen and (min-width: $large-screen)
    width: percentage(7/12)
    margin-left: percentage(2.5/12)
  @media screen and (min-width: $xl-screen)
    width: percentage(5/12)
    margin-left: percentage(3.5/12)
  p:first-child
    font-size: modular-scale(1)
    font-weight: 700
    margin-bottom: $base-spacing
  h1,h2,h3,h4,h5,h6
    margin-top: 1.5 * $base-spacing
    margin-bottom: $small-spacing
  iframe
    margin-top: $base-spacing
    margin-bottom: 2 * $base-spacing

.post-header
  background-color: white
  padding: $base-spacing 0 0
  @media screen and (min-width: $medium-screen)
    padding: $small-spacing $base-spacing 0
    width: calc(#{percentage(9/12)} + #{2 * $base-spacing})
    margin-left: calc(#{percentage(1.5/12)} - #{$base-spacing})
  @media screen and (min-width: $large-screen)
    width: calc(#{percentage(7/12)} + #{2 * $base-spacing})
    margin-left: calc(#{percentage(2.5/12)} - #{$base-spacing})
  @media screen and (min-width: $xl-screen)
    width: percentage(8/12)
    margin-left: calc(#{percentage(3.5/12)} - #{$base-spacing})
  .post-title
    font-size: modular-scale(3)
    @media screen and (min-width: $medium-screen)
      font-size: modular-scale(4)
    @media screen and (min-width: $large-screen)
      font-size: modular-scale(5)
    margin-bottom: 0

.post-date
  font-size: modular-scale(1)
  font-style: italic
  font-weight: 700
  color: $pink
  margin-top: $small-spacing !important
  margin-bottom: 0 !important
  position: relative
  z-index: 99

